--- a/index.html
+++ b/index.html
@@ -3,10 +3,32 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
     <title>Document</title>
   </head>
   <body>
-    <div class="container"></div>
+    <div
+      class="container d-flex align-items-center flex-column"
+      style="height: 100vh; width: 100vw"
+    >
+      <input
+        type="text"
+        class="form-control input"
+        placeholder="Enter the City"
+      />
+      <button class="btn btn-primary">Check</button>
+      <div class="information"></div>
+    </div>
     <script src="./script.js"></script>
   </body>
 </html>
